--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -40,34 +40,33 @@ $transparentwhite: rgba(255,255,255, .1);
 ************************/
 
 .state-0	{
-	//background-color: $grey6;
+	background-color: $grey2;
 }
 
-.state-1	{
+.state-1, .state-11	{
 	background-color: $lightyellow;
-// 	color: $black !important;
 }
 
 .state-2	{
 	background-color: $yellow;
 }
 
-.state-3, .state-11	{
+.state-3	{
 	background-color: $darkyellow;
 }
 
-.state-4, .state-10	{
+.state-4	{
 	background-color: $lightblue;
 }
 
-.state-5, .state-9	{
+.state-5, .state-10	{
 	background-color: $darkblue;
 }
 
-.state-6, .state-8	{
+.state-6, .state-9	{
 	background-color: $lightgreen;
 }
 
-.state-7	{
+.state-7, .state-8	{
 	background-color: $darkgreen;
 }
