--- a/styles/_viewSchedule.scss
+++ b/styles/_viewSchedule.scss
@@ -12,27 +12,32 @@
 		transition: width .6s;
 		
 		&.active	{
-			width: 4 * $bigUnit;
+			width: 5 * $bigUnit;
 		}
 		
-		.toolbar 			
+		.toolbar	{			
 			li	{
 				width: $bigUnit;
+				border-right: none;
 				
 				img	{
 					transform: rotate(0);
 					transition: transform .5s;
 				}
 				
+				&:hover	{
+					background-color: transparent;
+				}
+				
 				&.active	{
-					background-color: $grey3;
-					border-bottom: none;
+					background-color: transparent;
 					
 					img	{
-						transform: rotate(45deg);
+						transform: rotate(-45deg);
 					}
 				}
 			}
+		}
 	}
 	
 	.scale	{
@@ -167,6 +172,10 @@
 	}
 }
 
+/************************
+*		CARD			*
+************************/
+
 .card-container	{
 	position: absolute;
 	padding: 0 1rem;
@@ -181,6 +190,8 @@
 	color: $grey0;
 	cursor: pointer;
 	overflow: hidden;
+	
+	box-shadow: 0px 0px 5px rgba(0,0,0,.1);
 
 	.header	{
 		border-radius: 3px 3px 0 0;
@@ -195,14 +206,14 @@
 		img	{
 			float: right;
 			width: 2rem;
-			width: 2rem;
+			height: 2rem;
 		}
 	}
 	
 	.main	{
 		padding: .7rem 1rem;
 		
-		.diagnose	{
+		.service	{
 			margin-bottom: .5rem;
 		}
 	}
@@ -235,5 +246,136 @@
 	.card-container	{
 		padding-top: 1rem;
 		position: relative;
+	}
+	
+	.card	{
+		cursor: default;
+	}
+}
+
+/************************
+*		CARD DETAILS	*
+************************/
+
+.card-details-container	{
+	.header, .patient-data, .surgery-data, .plan, .timestamps	{
+		margin: $smallUnit/2 $smallUnit;
+	}
+	
+	.header	{
+		font-size: 1.5em;
+		line-height: 1.4em;
+		
+		margin-top: 0;
+		padding-top: $smallUnit/2;
+		
+		.name {
+			font-weight: 500;
+		}
+	}
+	
+	table {
+		width: 100%;
+	}
+	
+	tr	{
+		border-bottom: 1px dotted $grey2;
+		
+		&:first-child	{
+			border-bottom: 1px solid $grey2;
+		}
+	}
+	
+	th	{
+		text-align: left;
+		font-weight: 500;
+		
+		padding: .75rem 0;
+	}
+	
+	// Edit button
+	td img {
+		float: right;
+		width: 2rem;
+		height: 2rem;
+		cursor: pointer;
+		
+		opacity: .3;
+		transition: opacity .3s;
+		
+		&:hover	{
+			opacity: 1;
+		}
+	}
+	
+	td	{
+		padding: .5rem 0;
+		vertical-align: top;
+		
+		&:first-child	{
+			padding: .75rem 0;
+			width: $bigUnit;
+			color: $grey0;
+		}
+	}
+	
+	input, textarea	{
+		width: 100%;
+		padding: .25rem .5rem;
+		vertical-align: middle;
+		resize: none;
+		
+		color: inherit;
+		font-family: inherit;
+		font-size: inherit;
+		line-height: inherit;
+		font-weight: inherit;
+		
+		transition: background-color .3s, border .3s;
+		background-color: transparent;
+		
+		border: 1px solid transparent;
+		outline: none;
+		
+		cursor: default;
+	}
+	
+	.editing input, .editing textarea	{
+		background-color: $grey5;
+		//border: 1px solid $grey2;
+		
+		cursor: pointer;
+		
+		&:focus	{
+			background-color: $grey2;	
+		}	
+	}
+	
+	/************************
+	*		Barchart 		*
+	************************/
+	.barchart	{
+		.barchart-bars	{
+			height: 3rem;
+			overflow: hidden;
+			
+			div	{
+				height: 100%;
+				width: (100%/11);
+				float: left;
+				
+				transition: opacity .5s;
+				opacity: .7;
+				
+				&:hover	{
+					opacity: 1;
+				}
+			}
+			
+			.state-4, .state-6, .state-8, .state-10, .state-11	{
+				border-left: 3px solid $grey6;
+			}
+		}
+
 	}
 }
