--- a/styles/style.scss
+++ b/styles/style.scss
@@ -15,6 +15,7 @@ $bigUnit : 20rem;
 @import 'colors';
 @import 'structure';
 @import 'typography';
+@import 'elements';
 @import 'z-index';
 
 @import 'viewSchedule';
