Edit Card Details

--- a/styles/_elements.scss
+++ b/styles/_elements.scss
@@ -157,6 +157,8 @@ button	{
 	width: auto;
 	padding: 1rem 2rem;
 	margin-top: 1rem;
+	line-height: 1em;
+	
 	border-radius: .5rem;
 	float: right;
 	transition: background-color .2s;
