--- a/styles/style.css
+++ b/styles/style.css
@@ -214,7 +214,7 @@ nav {
     width: 25rem;
     padding: 0;
     background-color: transparent; }
-    nav ul.action-list li img {
+    nav ul.action-list li img, nav ul.action-list li svg {
       height: 5rem;
       width: 5rem;
       padding: 1.2rem;
@@ -224,6 +224,8 @@ nav {
       background-color: #414344; }
     nav ul.action-list li.active {
       background-color: #262728; }
+      nav ul.action-list li.active svg path, nav ul.action-list li.active svg rect {
+        fill: #00af96; }
   nav ul.action-list:nth-of-type(2) {
     position: relative;
     -webkit-box-flex: 1;
@@ -375,13 +377,17 @@ ul.action-list {
     border: 1px solid transparent;
     -webkit-transition: all 0.3s;
             transition: all 0.3s; }
-    ul.action-list li img {
+    ul.action-list li img, ul.action-list li svg {
       display: block;
       float: left;
       width: 2rem;
       height: 2rem;
       margin-top: 1.5rem;
       margin-right: 1rem; }
+    ul.action-list li svg path {
+      fill: white;
+      -webkit-transition: fill 0.3s;
+              transition: fill 0.3s; }
     ul.action-list li:hover {
       cursor: pointer;
       background-color: #363738;
@@ -389,12 +395,16 @@ ul.action-list {
       border-right: 1px solid #262728; }
       ul.action-list li:hover:first-child {
         border-left-color: transparent; }
+      ul.action-list li:hover svg path {
+        fill: #00af96; }
     ul.action-list li.active {
       background-color: #363738;
       border-left: 1px solid #262728;
       border-right: 1px solid #262728; }
       ul.action-list li.active:first-child {
         border-left-color: transparent; }
+      ul.action-list li.active svg path {
+        fill: #00af96; }
 
 /************************
 *		DATA-TABLE		*
@@ -408,8 +418,8 @@ table.data-table {
     border-bottom: 1px dotted #363738; }
     table.data-table tr:first-child {
       border-style: solid; }
-    table.data-table tr.top-space td {
-      margin-top: 2rem; }
+    table.data-table tr.no-border {
+      border: none; }
   table.data-table th {
     text-align: left;
     font-weight: 500;
@@ -431,6 +441,9 @@ table.data-table {
       padding: 1rem 1rem 1rem 0;
       width: 15rem;
       color: #999999; }
+    table.data-table td.button {
+      color: white;
+      padding: 0; }
 
 /************************
 *		FORMS		*
@@ -459,6 +472,8 @@ select {
   background-size: 1.5rem;
   background-position: 98% 50%;
   background-repeat: no-repeat; }
+  select:hover {
+    cursor: pointer; }
 
 button {
   width: auto;
@@ -467,14 +482,74 @@ button {
   line-height: 1em;
   border-radius: 0.5rem;
   float: right;
-  -webkit-transition: background-color 0.2s;
-          transition: background-color 0.2s;
+  -webkit-transition: background-color 0.1s;
+          transition: background-color 0.1s;
   cursor: pointer; }
-  button:hover {
+  button:hover, button:focus {
     background-color: #00af96; }
-  button.danger:hover {
+  button.danger:hover, button.danger:focus {
     background-color: #d13f3f; }
 
+/*
+.switch	{
+	position: relative;
+	
+	input	{
+		position: absolute;
+		z-index: 2;
+		opacity: 0;
+		cursor: pointer;
+		width: 4rem;
+		height: 3rem;
+	}
+	
+	label	{
+		letter-spacing: .4em;
+		color: $grey1;
+		font-size: 1.2em;
+		line-height: 1.2em;
+		
+		position: relative;
+		display: block;
+		cursor: pointer;
+		
+		width: 4rem;
+		height: 3rem;
+		padding: .5rem;
+
+		border-radius: 3px;
+		border: 1px solid $grey6;
+		background-color: $grey5;
+		
+		content: "♀ ♂"
+	}
+	
+	input + label:before	{
+		color: $white;
+		padding-left: .4rem;
+		padding-top: .5rem;
+	
+		content:"♀";
+
+		display: block;
+		position: absolute;
+		width: 2rem;
+		height: 3rem;
+		background-color: $grey6;
+		transition: all .3s;
+		
+		left: 0px;
+		top: -1px;
+		border-radius: 3px 0 0 3px;
+	}
+	
+	input:checked + label:before	{
+		content: "♂";
+		left: 2rem;
+		border-radius: 0 3px 3px 0;
+	}
+}
+*/
 .switch {
   position: relative; }
   .switch input {
@@ -482,42 +557,40 @@ button {
     z-index: 2;
     opacity: 0;
     cursor: pointer;
-    width: 4rem;
-    height: 3rem; }
+    width: 100%;
+    height: 2.8rem; }
   .switch label {
-    letter-spacing: 0.4em;
-    color: #5c5e60;
-    font-size: 1.2em;
-    line-height: 1.2em;
+    color: #494b4c;
     position: relative;
     display: block;
     cursor: pointer;
-    width: 4rem;
-    height: 3rem;
+    width: 100%;
+    height: 2.8rem;
     padding: 0.5rem;
-    border-radius: 3px;
     border: 1px solid #262728;
-    background-color: #363738;
-    content: "♀ ♂"; }
+    background-color: #262728; }
+    .switch label span {
+      display: block;
+      float: left;
+      width: 50%;
+      text-align: center; }
   .switch input + label:before {
     color: white;
-    padding-left: 0.4rem;
+    text-align: center;
     padding-top: 0.5rem;
-    content: "♀";
+    background-color: #363738;
     display: block;
     position: absolute;
-    width: 2rem;
-    height: 3rem;
-    background-color: #262728;
-    -webkit-transition: all 0.3s;
-            transition: all 0.3s;
-    left: 0px;
-    top: -1px;
-    border-radius: 3px 0 0 3px; }
+    top: 0px;
+    width: 50%;
+    height: 100%;
+    -webkit-transition: all 0.5s;
+            transition: all 0.5s;
+    content: "Unbestätigt";
+    left: 0px; }
   .switch input:checked + label:before {
-    content: "♂";
-    left: 2rem;
-    border-radius: 0 3px 3px 0; }
+    content: "Bestätigt";
+    left: 50%; }
 
 .card {
   z-index: 2; }
@@ -541,6 +614,8 @@ button {
         -ms-flex-direction: column;
             flex-direction: column;
     overflow: hidden; }
+  .schedule .toolbar .date.not-today svg path {
+    fill: #d13f3f; }
   .schedule .scale {
     list-style: none;
     position: absolute; }
@@ -630,7 +705,7 @@ button {
     .schedule .center-side .toolbar li {
       width: 20rem;
       border-right: none; }
-      .schedule .center-side .toolbar li img {
+      .schedule .center-side .toolbar li svg {
         -webkit-transform: rotate(0);
             -ms-transform: rotate(0);
                 transform: rotate(0);
@@ -640,10 +715,12 @@ button {
         background-color: transparent; }
       .schedule .center-side .toolbar li.active {
         background-color: transparent; }
-        .schedule .center-side .toolbar li.active img {
+        .schedule .center-side .toolbar li.active svg {
           -webkit-transform: rotate(-45deg);
               -ms-transform: rotate(-45deg);
                   transform: rotate(-45deg); }
+        .schedule .center-side .toolbar li.active:hover svg path {
+          fill: #d13f3f; }
     .schedule .center-side .content {
       display: -webkit-box;
       display: -webkit-flex;
@@ -743,12 +820,19 @@ button {
   .card-details-container .header, .card-details-container .patient-data, .card-details-container .surgery-data, .card-details-container .plan, .card-details-container .timestamps {
     margin: 2.5rem 5rem; }
   .card-details-container .header {
-    font-size: 1.5em;
-    line-height: 1.4em;
     margin-top: 0;
-    padding-top: 2.5rem; }
+    padding-top: 2.5rem;
+    height: 8rem; }
+    .card-details-container .header .header-info {
+      font-size: 1.5em;
+      line-height: 1.4em;
+      width: 65%;
+      float: left; }
     .card-details-container .header .name {
       font-weight: 500; }
+    .card-details-container .header button {
+      margin: 0;
+      background-color: #edbf40; }
   .card-details-container .data:not(.editing) input, .card-details-container .data:not(.editing) textarea, .card-details-container .data:not(.editing) select {
     background-color: transparent;
     cursor: default;
@@ -757,20 +841,45 @@ button {
       background-color: inherit; }
   .card-details-container input:focus, .card-details-container textarea:focus, .card-details-container select:focus {
     background-color: #494b4c; }
-  .card-details-container .barchart .barchart-bars {
-    height: 3rem;
-    overflow: hidden; }
-    .card-details-container .barchart .barchart-bars div {
-      height: 100%;
-      width: 9.090909091%;
-      float: left;
-      -webkit-transition: opacity 0.5s;
-              transition: opacity 0.5s;
-      opacity: 0.7; }
-      .card-details-container .barchart .barchart-bars div:hover {
-        opacity: 1; }
-    .card-details-container .barchart .barchart-bars .state-4, .card-details-container .barchart .barchart-bars .state-6, .card-details-container .barchart .barchart-bars .state-8, .card-details-container .barchart .barchart-bars .state-10, .card-details-container .barchart .barchart-bars .state-11 {
-      border-left: 3px solid #262728; }
+  .card-details-container .timestamps .start {
+    opacity: 0.3;
+    -webkit-transition: opacity 0.3s;
+            transition: opacity 0.3s; }
+    .card-details-container .timestamps .start:hover {
+      opacity: 1;
+      cursor: pointer; }
+  .card-details-container .barchart {
+    width: 100%; }
+    .card-details-container .barchart .barchart-bars {
+      height: 3rem;
+      overflow: hidden; }
+      .card-details-container .barchart .barchart-bars div {
+        height: 100%;
+        width: 9.090909091%;
+        float: left;
+        -webkit-transition: opacity 0.3s;
+                transition: opacity 0.3s;
+        opacity: 0.5; }
+        .card-details-container .barchart .barchart-bars div:hover, .card-details-container .barchart .barchart-bars div.next:hover, .card-details-container .barchart .barchart-bars div.highlight {
+          opacity: 1; }
+        .card-details-container .barchart .barchart-bars div.next:after {
+          content: "Start";
+          opacity: 0;
+          width: 100%;
+          display: block;
+          text-align: center;
+          line-height: 3rem;
+          cursor: pointer; }
+        .card-details-container .barchart .barchart-bars div.next:hover:after {
+          opacity: 1; }
+        .card-details-container .barchart .barchart-bars div.inactive {
+          opacity: 0.1; }
+      .card-details-container .barchart .barchart-bars .state-4, .card-details-container .barchart .barchart-bars .state-6, .card-details-container .barchart .barchart-bars .state-8, .card-details-container .barchart .barchart-bars .state-10, .card-details-container .barchart .barchart-bars .state-11 {
+        border-left: 3px solid #262728; }
+    .card-details-container .barchart .barchart-legend {
+      text-align: center;
+      padding-top: 2rem;
+      height: 4rem; }
 
 /************************
 *		ADD-Surgery		*
